--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.jpa.hibernate.ddl-auto=create
 # App Properties
 gwennies.sec.jwtSecret= vnatSecretKey
 gwennies.sec.jwtExpirationMs= 86400000
+
+# max file size
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
